--- a/style.css
+++ b/style.css
@@ -63,4 +63,6 @@ p {
     display: none;
 }
 
-/* https://www.horadecodar.com.br/2020/05/26/como-esconder-mostrar-uma-div-em-html/ */
+/* https://www.horadecodar.com.br/2020/05/26/como-esconder-mostrar-uma-div-em-html/
+   https://dev.to/vtrpldn/show-and-hide-content-easily-with-details-and-summary-html-tags-3eif
+ */
