--- a/style.css
+++ b/style.css
@@ -65,4 +65,6 @@ p {
 
 /* https://www.horadecodar.com.br/2020/05/26/como-esconder-mostrar-uma-div-em-html/
    https://dev.to/vtrpldn/show-and-hide-content-easily-with-details-and-summary-html-tags-3eif
+   https://marina-ferreira.github.io/tutorials/css/flexbox/
+   https://www.alura.com.br/artigos/css-guia-do-flexbox
  */
